--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "Dump raw git logs into a file",
   "main": "dist/index.js",
   "files": [
-    "bin/",
     "dist/"
   ],
   "scripts": {
@@ -50,6 +49,7 @@
     "doctoc": "^0.15.0",
     "eslint": "^1.10.1",
     "isparta": "^4.0.0",
+    "markdown-table": "^1.1.2",
     "rimraf": "^2.4.2",
     "tap-spec": "^4.1.1",
     "tape": "^4.2.2",
