--- a/package.json
+++ b/package.json
@@ -49,13 +49,13 @@
     "doctoc": "^0.15.0",
     "eslint": "^1.10.1",
     "isparta": "^4.0.0",
-    "markdown-table": "^1.1.2",
     "rimraf": "^2.4.2",
     "tap-spec": "^4.1.1",
     "tape": "^4.2.2",
     "watch": "^0.16.0"
   },
   "dependencies": {
-    "git-check": "^2.0.0"
+    "git-check": "^2.0.0",
+    "markdown-table": "^1.1.2"
   }
 }
